# geometrydash

./: .gitignore  CMakeLists.txt  README.md
geometrydash/: 04_key_presses.cpp  CMakeLists.txt  geometrydashworld.cpp  geometrydashworld.hpp  main.cpp  player.cpp  player.hpp  playerplayingstate.hpp  playerstate.hpp
geometrydash/sfx/: Master.bank
sgengine/: CMakeLists.txt  initialize_audio.cpp  initialize_audio.h
sgengine/core/: World.cpp  World.hpp
sgengine/libs/: SDL2
sgengine/sgengine/core/: Clock.cpp  Clock.hpp  Component.cpp  Component.hpp  DebugHandler.cpp  DebugHandler.hpp  GameClock.cpp  GameClock.hpp  GameObject.cpp  GameObject.hpp  ImageComponent.cpp  ImageComponent.hpp  InputComponent.cpp  InputComponent.hpp  Point.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Time.cpp  Time.hpp  World.cpp  World.hpp  initialize_audio.h  sound.cpp  tWorld.cpp
sgengine/sgengine/graphics/: Graphics.cpp  Graphics.hpp  Image.cpp  Image.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Spritesheet.cpp  Spritesheet.hpp  gfx.cpp
sgengine/sgengine/input/: Controller.cpp  Controller.hpp  Input.cpp  Input.hpp  PlayerController.cpp  PlayerController.hpp
sgengine/sgengine/interfaces/: IObjectStateMachine.cpp  IObjectStateMachine.hpp  IUpdate.cpp  IUpdate.hpp
